unpackaged/main/default/objects/GCP_KPI__c/GCP_KPI__c.object-meta.xml
<CustomObject>
    <label>GCP KPI</label>
    <nameField>
        <label>GCP KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GCP KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>