unpackaged/main/default/objects/GCP_KPI__c/fields/nba_is_repeater__c.field-meta.xml
<CustomField>
    <fullName>nba_is_repeater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Repeater HP</label>
    <type>Checkbox</type>
</CustomField>