unpackaged/main/default/objects/GCP_KPI__c/fields/nba_prediction__c.field-meta.xml
<CustomField>
    <fullName>nba_prediction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP Prediction</label>
    <type>Checkbox</type>
</CustomField>