unpackaged/main/default/objects/GCP_KPI__c/fields/nba_proba_1__c.field-meta.xml
<CustomField>
    <fullName>nba_proba_1__c</fullName>
    <label>Percentage of HP prediction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>