unpackaged/main/default/objects/GCP_KPI__c/fields/reco_product_3__c.field-meta.xml
<CustomField>
    <fullName>reco_product_3__c</fullName>
    <label>Recommended product 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>