unpackaged/main/default/objects/GCP_KPI__c/fields/UCRInternalId__c.field-meta.xml
<CustomField>
    <fullName>UCRInternalId__c</fullName>
    <externalId>true</externalId>
    <label>Client UCR Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>